fix search spacing

--- a/scss/_f-ui-elements.scss
+++ b/scss/_f-ui-elements.scss
@@ -243,8 +243,6 @@ $global-header-toggle-button-color: $primary-nav-link-color;
 
   .nav:not(.nav-pills) {
     .nav-item-search {
-      margin-left: $spacer-1;
-      margin-right: $spacer-1;
       border: $border-width solid $global-header-border-color;
     }
   }
